--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,30 @@ button {
     margin: 2% 40% 0;
     border-radius: 5px;
 }
+
+@media (max-width: 700px) {
+    form {
+        margin: auto;
+        padding: 10px 20px;
+        border: 2px solid #5893f5;
+        border-radius: 10px;
+    }
+}
+
+@media (min-width: 700px) and (max-width: 1020px) {
+    form {
+        margin: 20px 150px;
+        padding: 10px 50px;
+        border: 2px solid #5893f5;
+        border-radius: 10px;
+    }
+}
+
+@media (min-width: 1020px) {
+    form {
+        margin: 20px 150px;
+        padding: 10px 50px;
+        border: 2px solid #5893f5;
+        border-radius: 10px;
+    }
+}
